--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -2,22 +2,118 @@
 
 .home {
     display: flex;
+    position: relative;
     flex-direction: column;
     width: 100%;
-    height: 100%;
 
-    header {
+    nav {
+        ul {
+            display: flex;
+            justify-content: flex-end;
+            margin: 0;
+            padding: 16px;
+
+            li {
+                padding: 0 8px;
+                list-style: none;
+                font-size: 18px;
+            }
+        }
+    }
+
+    section {
         display: flex;
-        align-items: center;
+        flex-direction: row;
         flex-grow: 1;
-        justify-content: center;
+        z-index: 10;
 
-        h1 {
-            text-transform: lowercase;
-            font-size: 64px;
+        &.header {
+            height: 100vh;
 
-            span:last-child {
-                color: $color-accent;
+            .left-block {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 50vw;
+
+                .title-block {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin-top: -10vh;
+
+                    .pre-message {
+                        margin: 0;
+                        font-size: 3vh;
+                        font-weight: $font-weight-light;
+                    }
+
+                    .post-message {
+                        margin: 4vh 0;
+                        color: $color-text-label;
+                        font-size: 4vh;
+                        font-weight: $font-weight-light;
+                    }
+
+                    h1 {
+                        margin: 0;
+                        padding: 0;
+                        text-transform: lowercase;
+                        line-height: 1;
+                        font-size: 10vh;
+
+                        span:last-child {
+                            color: $color-accent;
+                        }
+                    }
+                }
+            }
+
+            .right-block {
+                width: 50vw;
+            }
+        }
+
+        &.services {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+
+            h2 {
+                margin-bottom: 48px;
+                text-transform: initial;
+                font-size: 48px;
+            }
+
+            .service-list {
+                display: flex;
+                justify-content: space-around;
+                font-size: 20px;
+
+                .service {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    padding: 24px 48px;
+                    width: 360px;
+                    text-align: center;
+
+                    img {
+                        margin: 24px 0;
+                    }
+
+                    h3 {
+                        text-transform: capitalize;
+                    }
+
+                    p {
+                        line-height: 1.3;
+                        font-size: 0.8em;
+                        font-weight: $font-weight-light;
+                    }
+                }
             }
         }
     }
