--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -28,7 +28,7 @@
         z-index: 10;
 
         &.header {
-            height: 100vh;
+            min-height: 100vh;
 
             .left-block {
                 display: flex;
@@ -76,10 +76,10 @@
 
         &.services {
             display: flex;
-            justify-content: center;
             align-items: center;
             flex-direction: column;
-            height: 100vh;
+            justify-content: center;
+            min-height: 50vh;
 
             h2 {
                 margin-bottom: 48px;
@@ -89,6 +89,7 @@
 
             .service-list {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-around;
                 font-size: 20px;
 
@@ -102,6 +103,7 @@
 
                     img {
                         margin: 24px 0;
+                        height: 128px;
                     }
 
                     h3 {
@@ -109,12 +111,60 @@
                     }
 
                     p {
-                        line-height: 1.3;
+                        line-height: 1.6;
                         font-size: 0.8em;
                         font-weight: $font-weight-light;
                     }
                 }
             }
         }
+
+        &.expertise {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 100vh;
+
+            h2 {
+                margin-bottom: 48px;
+                text-transform: initial;
+                font-size: 48px;
+            }
+
+            .expertise-group-list {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-around;
+                font-size: 20px;
+
+                .expertise-group {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    padding: 24px 48px;
+                    width: 360px;
+                    text-align: center;
+
+                    ul {
+                        margin: 0;
+                        padding: 0;
+
+                        li {
+                            padding: 16px 0;
+                            list-style: none;
+
+                            img {
+                                width: 144px;
+                                height: 64px;
+                                object-fit: contain;
+                                object-position: center;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
     }
 }
