--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -4,6 +4,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
+    overflow: hidden;
     width: 100%;
 
     nav {
@@ -28,13 +29,17 @@
         z-index: 10;
 
         &.header {
-            min-height: 100vh;
+            display: flex;
+            flex-wrap: wrap;
+            background-color: #ffffff;
+            width: 100vw;
+            min-height: 95vh;
 
             .left-block {
                 display: flex;
                 align-items: center;
+                flex-basis: 50%;
                 justify-content: center;
-                width: 50vw;
 
                 .title-block {
                     display: flex;
@@ -69,9 +74,79 @@
                 }
             }
 
-            .right-block {
-                width: 50vw;
+            @keyframes oscillate {
+                0% { transform: translateY(0px); }
+                20% { transform: translateY(8px); }
+                40% { transform: translateY(20px); }
+                100% { transform: translateY(0px); }
             }
+
+            .right-block {
+                display: flex;
+                align-items: flex-end;
+                flex-basis: 50%;
+                justify-content: flex-end;
+                padding: $spacing-extra-large;
+
+                .down-button {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: transparent;
+                    border: 0;
+                    color: $color-text-label;
+                    outline: 0;
+                    cursor: pointer;
+                    font-size: 144px;
+                    height: 144px;
+                    width: 144px;
+                    animation: oscillate 2s linear infinite;
+                }
+            }
+
+            @media screen and (max-width: 1080px) {
+                .left-block {
+                    flex-basis: 70%;
+                }
+
+                .right-block {
+                    flex-basis: 30%;
+                }
+            }
+
+            @media screen and (max-width: 720px) {
+                flex-direction: column;
+
+                .left-block {
+                    flex-grow: 1;
+
+                    .title-block {
+                        .pre-message {
+                            font-size: 32px;
+                        }
+
+                        .post-message {
+                            font-size: 32px;
+                        }
+
+                        h1 {
+                            font-size: 64px;
+                        }
+                    }
+                }
+
+                .right-block {
+                    flex-basis: 100%;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+
+        h2 {
+            margin: 48px 0;
+            text-transform: initial;
+            font-size: 48px;
         }
 
         &.services {
@@ -79,13 +154,8 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            min-height: 50vh;
-
-            h2 {
-                margin-bottom: 48px;
-                text-transform: initial;
-                font-size: 48px;
-            }
+            min-height: 80vh;
+            background-color: #f5f5f5;
 
             .service-list {
                 display: flex;
@@ -124,13 +194,8 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            min-height: 100vh;
-
-            h2 {
-                margin-bottom: 48px;
-                text-transform: initial;
-                font-size: 48px;
-            }
+            background-color: #ffffff;
+            min-height: 80vh;
 
             .expertise-group-list {
                 display: flex;
@@ -142,13 +207,18 @@
                     display: flex;
                     align-items: center;
                     flex-direction: column;
-                    padding: 24px 48px;
-                    width: 360px;
                     text-align: center;
+
+                    .group-title {
+                        display: none;
+                        text-transform: capitalize;
+                        text-align: center;
+                    }
 
                     ul {
                         margin: 0;
-                        padding: 0;
+                        padding: 24px 48px;
+                        width: 360px;
 
                         li {
                             padding: 16px 0;
@@ -163,6 +233,48 @@
                         }
                     }
                 }
+
+                @media screen and (max-width: 1460px) {
+                    .expertise-group {
+                        ul {
+                            width: 240px;
+                        }
+                    }
+                }
+                @media screen and (max-width: 980px) {
+                    .expertise-group {
+                        ul {
+                            padding: 24px;
+                            width: 180px;
+                        }
+                    }
+                }
+                @media screen and (max-width: 740px) {
+                    .expertise-group {
+                        ul {
+                            .group-title {
+                                display: block;
+                                margin-bottom: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        &.clients {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            background-color: #f0f0f0;
+            min-height: 60vh;
+
+            .client-list {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-around;
+                max-width: 720px;
             }
         }
 
@@ -171,12 +283,51 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            min-height: 100vh;
+            background-color: #ffffff;
+            min-height: 80vh;
 
-            h2 {
-                margin-bottom: 48px;
+            .team-list {
+                padding-bottom: 24px;
+            }
+        }
+
+        &.contact {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            background-color: #ffffff;
+            min-height: 700px;
+
+            a {
                 text-transform: initial;
-                font-size: 48px;
+                color: $color-accent;
+            }
+
+            .contact-info {
+                >p {
+                    font-size: 16px;
+
+                    i {
+                        width: 32px;
+                    }
+                }
+            }
+
+            .the-map {
+                width: 100%;
+                min-width: 200px;
+                max-width: 800px;
+                height: 100%;
+                min-height: 200px;
+                max-height: 600px;
+
+                iframe {
+                    border: 1px solid rgba(255, 255, 255, 0.1);
+                    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.5);
+                    width: 100%;
+                    height: 400px;
+                }
             }
         }
     }
