--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -4,8 +4,8 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    overflow: hidden;
     width: 100%;
+    overflow: hidden;
 
     nav {
         ul {
@@ -27,11 +27,13 @@
         flex-direction: row;
         flex-grow: 1;
         z-index: 10;
+        padding: 48px 0;
 
         &.header {
             display: flex;
             flex-wrap: wrap;
             background-color: #ffffff;
+            padding: 0;
             width: 100vw;
             min-height: 95vh;
 
@@ -85,22 +87,74 @@
                 display: flex;
                 align-items: flex-end;
                 flex-basis: 50%;
+                flex-direction: column;
                 justify-content: flex-end;
                 padding: $spacing-extra-large;
+
+                nav {
+                    display: flex;
+                    flex-direction: column;
+                    flex-grow: 1;
+                    justify-content: center;
+                    padding-top: 120px;
+
+                    ul {
+                        display: flex;
+                        align-items: flex-end;
+                        flex-direction: column;
+
+                        li {
+                            transition: .2s color ease-in-out;
+                            cursor: pointer;
+                            padding: 20px;
+                            text-transform: capitalize;
+                            color: rgba(0, 0, 0, .7);
+                            font-size: 16px;
+                            font-weight: $font-weight-light;
+
+                            &:hover {
+                                color: $color-accent;
+                            }
+                        }
+                    }
+                }
 
                 .down-button {
                     display: flex;
                     align-items: center;
+                    align-self: flex-end;
                     justify-content: center;
-                    background-color: transparent;
-                    border: 0;
-                    color: $color-text-label;
                     outline: 0;
+                    border: 0;
+                    background-color: transparent;
                     cursor: pointer;
-                    font-size: 144px;
-                    height: 144px;
                     width: 144px;
+                    height: 144px;
                     animation: oscillate 2s linear infinite;
+                    color: $color-text-label;
+                    font-size: 144px;
+                }
+            }
+
+            .bottom-block {
+                display: none;
+                align-items: center;
+                justify-content: center;
+
+                .down-button {
+                    display: flex;
+                    align-items: center;
+                    align-self: flex-end;
+                    justify-content: center;
+                    outline: 0;
+                    border: 0;
+                    background-color: transparent;
+                    cursor: pointer;
+                    width: 144px;
+                    height: 144px;
+                    animation: oscillate 2s linear infinite;
+                    color: $color-text-label;
+                    font-size: 144px;
                 }
             }
 
@@ -119,6 +173,7 @@
 
                 .left-block {
                     flex-grow: 1;
+                    order: 2;
 
                     .title-block {
                         .pre-message {
@@ -136,15 +191,35 @@
                 }
 
                 .right-block {
-                    flex-basis: 100%;
                     align-items: center;
+                    flex-basis: 100%;
                     justify-content: center;
+                    order: 1;
+
+                    nav {
+                        padding: 0;
+
+                        ul {
+                            flex-direction: row;
+                        }
+                    }
+
+                    .down-button {
+                        display: none;
+                    }
+                }
+
+                .bottom-block {
+                    display: flex;
+                    order: 3;
                 }
             }
         }
 
         h2 {
             margin: 48px 0;
+            padding-bottom: 24px;
+            text-align: center;
             text-transform: initial;
             font-size: 48px;
         }
@@ -154,8 +229,8 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            min-height: 80vh;
             background-color: #f5f5f5;
+            min-height: 80vh;
 
             .service-list {
                 display: flex;
@@ -189,12 +264,48 @@
             }
         }
 
-        &.expertise {
+        &.clients {
             display: flex;
             align-items: center;
             flex-direction: column;
             justify-content: center;
             background-color: #ffffff;
+            min-height: 60vh;
+
+            .client-list {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: space-around;
+                max-width: 920px;
+
+                .client {
+                    padding: 36px 24px;
+
+                    img {
+                        width: 180px;
+                        height: 120px;
+                        object-fit: contain;
+                        object-position: center center;
+                    }
+                }
+            }
+
+            @media screen and (max-width: 720px) {
+                .client-list {
+                    .client {
+                        padding: 8px 12px;
+                    }
+                }
+            }
+        }
+
+        &.expertise {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            background-color: #f5f5f5;
             min-height: 80vh;
 
             .expertise-group-list {
@@ -211,8 +322,8 @@
 
                     .group-title {
                         display: none;
-                        text-transform: capitalize;
                         text-align: center;
+                        text-transform: capitalize;
                     }
 
                     ul {
@@ -252,29 +363,11 @@
                 @media screen and (max-width: 740px) {
                     .expertise-group {
                         ul {
-                            .group-title {
-                                display: block;
-                                margin-bottom: 16px;
-                            }
+                            display: flex;
+                            flex-wrap: wrap;
                         }
                     }
                 }
-            }
-        }
-
-        &.clients {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: center;
-            background-color: #f0f0f0;
-            min-height: 60vh;
-
-            .client-list {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                max-width: 720px;
             }
         }
 
@@ -285,10 +378,6 @@
             justify-content: center;
             background-color: #ffffff;
             min-height: 80vh;
-
-            .team-list {
-                padding-bottom: 24px;
-            }
         }
 
         &.contact {
@@ -296,7 +385,7 @@
             align-items: center;
             flex-wrap: wrap;
             justify-content: space-around;
-            background-color: #ffffff;
+            background-color: #f5f5f5;
             min-height: 700px;
 
             a {
