--- a/client/src/views/Team/styles.scss
+++ b/client/src/views/Team/styles.scss
@@ -1,80 +1,114 @@
 @import '~base-scss/base';
 
-.members{
+.members {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     margin: auto;
-    max-width: 1080px;
+    max-width: 920px;
 
     .member {
-        @include shadow-medium;
-        position: relative;
-        margin: 10px 8px;
-        outline: none;
-        border: 0;
-        border-radius: 5px;
-        cursor: pointer;
-        padding: 0;
-        height: 320px;
-        overflow: hidden;
+        display: flex;
+        flex-basis: 100vw;
+        border-bottom: 1px solid $color-separator;
+        padding: 12px;
 
         .image {
-            transition: 10s transform ease-in-out;
-            width: 160px;
-            height: 100%;
+            border-radius: 50%;
+            width: 96px;
+            height: 96px;
             object-fit: cover;
-            object-position: center bottom;
+            object-position: center center;
         }
 
         .description {
-            position: absolute;
-            bottom: -40px;
-            left: 0;
-            transition: .2s bottom ease-in-out;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-            background-color: rgba(255, 255, 255, .9);
-            padding: 0 8px 4px 8px;
-            width: 100%;
-            height: 70px;
-
-            .name {
-                padding: $spacing-small 0;
-                color: $color-text-label;
-                font-weight: $font-weight-bold;
-            }
-
-            .designation {
-                transition: .2s .2s opacity ease-in-out;
-                opacity: 0;
-            }
+            padding: 8px 12px;
 
             .links {
-                transition: .2s .2s opacity ease-in-out;
-                opacity: 0;
-                padding: 2px 0;
+                .link {
+                    padding-right: 6px;
+                }
             }
         }
+    }
 
-        &:hover {
+    @media screen and (min-width: 480px) {
+        .member {
+            display: block;
+            position: relative;
+            flex-basis: auto;
+            margin: 10px 8px;
+            outline: none;
+            border: 0;
+            border-bottom: 0;
+            border-radius: 0;
+            cursor: pointer;
+            padding: 0;
+            height: 240px;
+            overflow: hidden;
+
             .image {
-                transform: scale(1.1);
+                border-radius: 0;
+                transition: 10s transform ease-in-out;
+                width: 160px;
+                height: 100%;
+                object-fit: cover;
+                object-position: center bottom;
             }
 
             .description {
-                bottom: 0;
+                position: absolute;
+                bottom: -40px;
+                left: 0;
+                transition: .2s bottom ease-in-out;
+                background-color: rgba(231, 76, 60, .9);
+                padding: 0 8px 4px 8px;
+                width: 100%;
+                height: 70px;
+                color: #fff;
 
                 .name {
-                    color: $color-text;
+                    padding: $spacing-small 0;
+                    color: #fff;
+                    font-weight: $font-weight-bold;
                 }
 
                 .designation {
-                    opacity: 1;
+                    transition: .2s .2s opacity ease-in-out;
+                    opacity: 0;
                 }
 
                 .links {
-                    opacity: 1;
+                    transition: .2s .2s opacity ease-in-out;
+                    opacity: 0;
+                    padding: 2px 0;
+
+                    .link {
+                        cursor: pointer;
+                        padding-right: 12px;
+                    }
+                }
+            }
+
+            &:hover {
+                .image {
+                    transform: scale(1.1);
+                }
+
+                .description {
+                    bottom: 0;
+
+                    .name {
+                        color: #ffffff;
+                    }
+
+                    .designation {
+                        opacity: 1;
+                    }
+
+                    .links {
+                        opacity: 1;
+                    }
                 }
             }
         }
