--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -27,12 +27,16 @@
         flex-direction: row;
         flex-grow: 1;
         z-index: 10;
+        background-color: #ffffff;
         padding: 48px 0;
+
+        &:nth-child(even) {
+            background-color: #f5f5f5;
+        }
 
         &.header {
             display: flex;
             flex-wrap: wrap;
-            background-color: #ffffff;
             padding: 0;
             width: 100vw;
             min-height: 95vh;
@@ -229,7 +233,6 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            background-color: #f5f5f5;
             min-height: 80vh;
 
             .service-list {
@@ -269,7 +272,6 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            background-color: #ffffff;
             min-height: 60vh;
 
             .client-list {
@@ -305,7 +307,6 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            background-color: #f5f5f5;
             min-height: 80vh;
 
             .expertise-group-list {
@@ -376,7 +377,6 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            background-color: #ffffff;
             min-height: 80vh;
         }
 
@@ -385,7 +385,6 @@
             align-items: center;
             flex-wrap: wrap;
             justify-content: space-around;
-            background-color: #f5f5f5;
             min-height: 700px;
 
             a {
