Set particles as background

--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -40,10 +40,15 @@
             padding: 0;
             width: 100vw;
             min-height: 95vh;
+            position: relative;
 
             .particle-text {
                 width: 100%;
                 height: 100%;
+                position:absolute;
+                top: 0;
+                left: 0;
+                z-index: -100;
             }
 
             .left-block {
@@ -51,6 +56,7 @@
                 align-items: center;
                 flex-basis: 50%;
                 justify-content: center;
+                pointer-events: none;
 
                 .title-block {
                     display: flex;
@@ -99,6 +105,7 @@
                 flex-direction: column;
                 justify-content: flex-end;
                 padding: $spacing-extra-large;
+                pointer-events: none;
 
                 nav {
                     display: flex;
@@ -106,6 +113,7 @@
                     flex-grow: 1;
                     justify-content: center;
                     padding-top: 120px;
+                    pointer-events: all;
 
                     ul {
                         display: flex;
@@ -142,6 +150,7 @@
                     animation: oscillate 2s linear infinite;
                     color: $color-text-label;
                     font-size: 144px;
+                    pointer-events: all;
                 }
             }
 
