--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -81,10 +81,10 @@
             }
 
             @keyframes oscillate {
-                0% { transform: translateY(0px); }
+                0% { transform: translateY(0); }
                 20% { transform: translateY(8px); }
                 40% { transform: translateY(20px); }
-                100% { transform: translateY(0px); }
+                100% { transform: translateY(0); }
             }
 
             .right-block {
@@ -249,37 +249,30 @@
             flex-direction: column;
             justify-content: center;
             min-height: 80vh;
+        }
 
-            .service-list {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                font-size: 20px;
+        &.clients {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 60vh;
+        }
 
-                .service {
-                    display: flex;
-                    align-items: center;
-                    flex-direction: column;
-                    padding: 24px 48px;
-                    width: 360px;
-                    text-align: center;
+        &.expertise {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 80vh;
+        }
 
-                    img {
-                        margin: 24px 0;
-                        height: 128px;
-                    }
-
-                    h3 {
-                        text-transform: capitalize;
-                    }
-
-                    p {
-                        line-height: 1.6;
-                        font-size: 0.8em;
-                        font-weight: $font-weight-light;
-                    }
-                }
-            }
+        &.team {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 80vh;
         }
 
         &.contact {
