--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -63,7 +63,8 @@ body {
 :global {
     .main-content {
         height: 100vh;
-        overflow-y: auto;
+        overflow-x: hidden; /*Horizontal scroll */
+        overflow-y: visible;
     }
 }
 
@@ -74,4 +75,14 @@ body {
     &:hover {
         text-decoration: underline;
     }
+}
+.container-block {
+    position: relative;
+    width: 1170px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: $spacing-medium-alt;
+    padding-right: $spacing-medium-alt;
+    text-align: center;
 }
