--- a/client/src/views/Home/Clients/styles.scss
+++ b/client/src/views/Home/Clients/styles.scss
@@ -1,23 +1,39 @@
 @import '~base-scss/base';
 
-.client-list {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 920px;
-
-    .client {
-        padding: 36px 24px;
-
-        img {
-            width: 180px;
-            height: 120px;
-            object-fit: contain;
-            object-position: center center;
+.clients-section{
+    position: relative;
+    background-color: #555555;
+    .overlay-block{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        img{
+            width: 100%;
+        }
+    }
+    .client-list {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    
+        .client {
+            padding: 24px;
+            .client-inner{
+                background-color: #707070;
+                padding: 25px;
+                img {
+                    width: 180px;
+                    height: 120px;
+                    object-fit: contain;
+                    object-position: center center;
+                }
+            }
         }
     }
 }
+
 
 @media screen and (max-width: 720px) {
     .client-list {
