--- a/client/src/views/Home/Services/styles.scss
+++ b/client/src/views/Home/Services/styles.scss
@@ -1,32 +1,54 @@
 @import '~base-scss/base';
+.services-section{
+    background: #3c3c3c; /*to be updated in CSS variables*/
 
-.service-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    font-size: 20px;
+    h2{
+        color: #f15928; /*to be updated in CSS variables*/
+        display: block;
+        font-weight: $font-weight-bold;
+    }
 
-    .service {
+    .service-list {
         display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding: 24px 48px;
-        width: 360px;
-        text-align: center;
-
-        img {
-            margin: 24px 0;
-            height: 128px;
-        }
-
-        h3 {
-            text-transform: capitalize;
-        }
-
-        p {
-            line-height: 1.6;
-            font-size: 0.8em;
-            font-weight: $font-weight-light;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        font-size: 20px;
+    
+        .service {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 50px;
+            padding: 0 15px;
+            width: 360px;
+            text-align: center;
+            
+            .services-inner{
+                background-color: #252525;
+                padding: 30px;
+                color: #fff;
+                height: 100%;
+            
+    
+                img {
+                    margin: 24px 0;
+                    height: 128px;
+                }
+        
+                h3 {
+                    text-transform: capitalize;
+                    font-weight: $font-weight-bold;
+                    color: #fff;
+                }
+        
+                p {
+                    line-height: 1.6;
+                    font-size: 0.8em;
+                    font-weight: $font-weight-light;
+                    color: #fff;
+                }
+            }
         }
     }
 }
+
