--- a/client/src/views/Home/Team/Member/styles.scss
+++ b/client/src/views/Home/Team/Member/styles.scss
@@ -1,10 +1,41 @@
 @import '~base-scss/base';
 
 .member {
+    position: relative;
     display: flex;
     flex-basis: 100vw;
     border-bottom: 1px solid $color-separator;
     padding: 12px;
+    .overlay-member{
+        display: none;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 25px;
+        height: 25px;
+        font-weight:$font-weight-bold;
+        &::before{
+            display: none;
+            position:absolute;
+            content: '';
+            bottom: 0;
+            right: 0;
+            border-width: 25px;
+            border-style: solid;
+            border-color: transparent #fff #fff transparent;
+            z-index: 1;
+        }
+        &::after{
+            position: absolute;
+            display: none;
+            content: '+';
+            color: #f15928;
+            font-size: $font-size-large-alt;
+            bottom: 5px;
+            right: 10px;
+            z-index: 9;
+        }
+    }
 
     .image {
         border-radius: 50%;
@@ -39,6 +70,20 @@
         padding: 0;
         height: 240px;
         overflow: hidden;
+        .overlay-member{
+            display: block;
+            color: #f15928;
+            &::before{
+                display: block;
+            }
+            &::after{
+                display: block;
+                &:hover{
+                    content: '-';
+                }
+            }
+            
+        }
 
         .image {
             border-radius: 0;
@@ -51,18 +96,37 @@
 
         .description {
             position: absolute;
-            bottom: -40px;
-            left: 0;
-            transition: .2s bottom ease-in-out;
-            background-color: rgba(231, 76, 60, .9);
-            padding: 0 8px 4px 8px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            top: 0;
+            left: 100%;
+            right: 0;
+            right: 0;
             width: 100%;
-            height: 70px;
+            height: 100%;
+            background: -moz-linear-gradient(left, 
+                rgba(241,89,40,0.7) 0%, 
+                rgba(244,0,0,0.89) 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(left, 
+                rgba(241,89,40,0.7) 0%,
+                rgba(244,0,0,0.89) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to right, 
+                rgba(241,89,40,0.7) 0%,
+                rgba(244,0,0,0.89) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( 
+                startColorstr='#b3f15928', 
+                endColorstr='#e3f40000',GradientType=1 ); /* IE6-9 */
+            
+            padding: 0 8px 4px 8px;
+            opacity: 0;
+            transition: .3s all ease-in;
             color: #fff;
 
             .name {
                 padding: $spacing-small 0;
                 color: #fff;
+                font-size: $font-size-large-alt;
                 font-weight: $font-weight-bold;
             }
 
@@ -84,12 +148,19 @@
         }
 
         &:hover {
+            .overlay-member{
+                &::after{
+                    content: '-';
+                }
+            }
             .image {
                 transform: scale(1.1);
             }
 
             .description {
+                left: 0;
                 bottom: 0;
+                opacity: 1;
 
                 .name {
                     color: #ffffff;
